newclay/test/Compiler/Propagation/Fail/ContinueOutsideLoop/main.clay

symbol main;
overload main() {
    continue;
}
